[package]
name = "cart-converter"
version = "2.1.0"
edition = "2021"

[dependencies]
calamine = "0.26"
rust_xlsxwriter = "0.82"
eframe = "0.31"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
open = "5"
encoding_rs = "0.8"
